objects/ASI_MFM_Budget_Setup__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_Active__c</fullName>
        <formula>IF( AND( ASI_MFM_Start_Date__c &lt;=today(), ASI_MFM_End_Date__c &gt;=today()) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY1415</fullName>
                </value>
                <value>
                    <fullName>FY1516</fullName>
                </value>
                <value>
                    <fullName>FY1617</fullName>
                </value>
                <value>
                    <fullName>FY1718</fullName>
                </value>
                <value>
                    <fullName>FY1819</fullName>
                </value>
                <value>
                    <fullName>FY1920</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ASI MFM Budget Setup</label>
    <listViews>
        <fullName>ASI_MFM_KR_All_KR_Budget_Setup</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Type__c</columns>
        <columns>ASI_MFM_Start_Date__c</columns>
        <columns>ASI_MFM_End_Date__c</columns>
        <columns>ASI_MFM_Active__c</columns>
        <columns>ASI_MFM_Fiscal_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Budget_Setup__c.ASI_MFM_KR_Budget_Setup</value>
        </filters>
        <label>All KR Budget Setup</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
            <roleAndSubordinates>ASI_KOR_I_T_Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Type__c</columns>
        <columns>ASI_MFM_Start_Date__c</columns>
        <columns>ASI_MFM_End_Date__c</columns>
        <columns>ASI_MFM_Active__c</columns>
        <columns>ASI_MFM_Fiscal_Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ASI MFM Budget Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI MFM Budget Setup</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_KR_Budget_Setup</fullName>
        <active>true</active>
        <label>KR Budget Setup</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>